--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.arainko.nawts.view.containters.homeFragment.HomeFragment"
+        android:name="com.arainko.nawts.view.fragments.homeFragment.HomeFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_home" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/editingFragment"
-        android:name="com.arainko.nawts.view.containters.editFragment.EditFragment"
+        android:name="com.arainko.nawts.view.fragments.editFragment.EditFragment"
         android:label="fragment_note_edit"
         tools:layout="@layout/fragment_edit">
         <argument
