--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="100dp"
     android:layout_margin="5dp"
     app:cardElevation="0dp"
     android:foreground="?android:attr/selectableItemBackground"
@@ -26,12 +25,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:textColor="@android:color/primary_text_light"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@android:color/primary_text_light"
             app:layout_constraintEnd_toStartOf="@+id/iconButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Header" />
 
         <TextView
             android:id="@+id/cardText"
@@ -41,12 +41,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:textSize="14sp"
             android:textColor="@android:color/secondary_text_light"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardHeader" />
+            app:layout_constraintTop_toBottomOf="@+id/cardHeader"
+            tools:text="Lotsa content here yuh" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/iconButton"
