got rid of FragmentHandler, functionality now lives in either ViewModels or Fragment itself, converted StartDragListener to a Java interface to make use of SAM interfaces

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -15,8 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@{viewmodel.backgroundColor}"
-        android:transitionName="transitionName"
-        tools:context=".view.fragments.editFragment.EditFragment">
+        android:transitionName="@{viewmodel.layoutTransitionName}"
+        tools:context=".view.fragments.EditFragment">
 
         <LinearLayout
             android:id="@+id/constraintLayout"
